--- a/Text.html
+++ b/Text.html
@@ -115,4 +115,14 @@
             Нажмите, чтобы продолжить
         </p>
     </div>
+
+    <div id="batch_end" class="service">
+        <p>Серия ${data.batch} из ${data.batch_count} завершена</p>
+        Ошибка: ${data.avg_accuracy}%<br>
+        <b>Введите длительность серии (по ощущениям) и нажмите enter</b>
+    </div>
+
+    <div id="batch_space" class="service">
+        <p>Нажмите пробел для продолжения</p>
+    </div>
 </body>
