--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            width: 100%;
             overflow: hidden;
         }
 
@@ -30,9 +31,10 @@
             border: none;
         }
 
+        /* --- Container and SVG --- */
         .svg-container {
             width: 100%;
-            height: calc(100vh - 120px);
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -41,9 +43,9 @@
         }
 
         svg {
-            max-width: 100%;
-            max-height: 100%;
-            border: 1px solid #ccc;
+            width: 100%;
+            height: 100%;
+            border: none;
             background: #fff;
         }
 
@@ -102,7 +104,8 @@
             align-items: center;
             font: bold 22px Arial, sans-serif;
             color: #333;
-            z-index: 10
+            z-index: 10;
+            transition: opacity 0.3s ease;
         }
 
         .svg-banner.hidden {
@@ -136,6 +139,28 @@
         .time-inputs.hidden {
             display: none;
         }
+
+        /* --- Save and Exit Button --- */
+        #saveExitBtn {
+            position: absolute;
+            top: 15px;
+            right: 20px;
+            padding: 10px 18px;
+            background: #0078d7;
+            color: white;
+            font-size: 16px;
+            font-family: Arial, sans-serif;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            z-index: 20;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            transition: background 0.2s ease;
+        }
+
+        #saveExitBtn:hover {
+            background: #005fa3;
+        }
     </style>
 </head>
 <body>
@@ -143,6 +168,9 @@
 <div id="instructionsBox" class="instructions-box hidden"></div>
 
 <div class="svg-container">
+    <!-- Save and Exit Button -->
+    <button id="saveExitBtn">Save and Exit</button>
+
     <svg id="animation_svg" viewBox="0 0 700 400" preserveAspectRatio="xMidYMid meet">
         <g id="svg_ball_bottom"></g>
         <g id="svg_ball_middle"></g>
@@ -189,13 +217,14 @@
 </div>
 
 <iframe src="./Text.html" id="instructionTexts" height="0" width="0"></iframe>
+<iframe src="./Library.html" id="trajJsonLib" height="0" width="0"></iframe>
 
 <script type="module">
-    import {RandomRunner} from "./RandomRunner.js";
+    import {StaticRunner} from "./StaticRunner.js";
     import * as Launcher from "./LoggedLaunchers.js"
 
     window.onload = async function() {
-        let rr = new RandomRunner();
+        let rr = new StaticRunner();
         await rr.Run();
     }
 </script>
