added fixed occluder value

--- a/Library.html
+++ b/Library.html
@@ -14,6 +14,7 @@
                             {"x": 350, "y": 160},
                             {"x": 450, "y": 200}
                         ],
+                        "mask": 100,
                         "tag": "traj-A1"
                     }
                 },
@@ -38,6 +39,7 @@
                             {"x": 550, "y": 180},
                             {"x": 650, "y": 170}
                         ],
+                        "mask": 100,
                         "tag": "traj-A2"
                     }
                 },
@@ -66,6 +68,7 @@
                             {"x": 480, "y": 180},
                             {"x": 560, "y": 150}
                         ],
+                        "mask": 100,
                         "tag": "traj-B1"
                     }
                 },
@@ -91,6 +94,7 @@
                             {"x": 300, "y": 250},
                             {"x": 200, "y": 300}
                         ],
+                        "mask": 100,
                         "tag": "traj-B2"
                     }
                 },
@@ -121,6 +125,7 @@
                             {"x": 550, "y": 300},
                             {"x": 650, "y": 350}
                         ],
+                        "mask": 100,
                         "tag": "traj-C1"
                     }
                 },
@@ -147,6 +152,7 @@
                             {"x": 200, "y": 220},
                             {"x": 100, "y": 180}
                         ],
+                        "mask": 100,
                         "tag": "traj-C2"
                     }
                 },
