fixation styles change

--- a/Index.html
+++ b/Index.html
@@ -195,6 +195,11 @@
                 <line x1="0" x2="0" y1="-10" y2="10" class="svg_fixation_pt" />
             </g>
         </g>
+        <g id="svg_fixation_triangle">
+            <g transform="translate(350,200)">
+                <polygon points="-10,10 0,-10 10,10" class="svg_fixation_pt" />
+            </g>
+        </g>
     </svg>
 
     <div id="svg_banner" class="svg-banner hidden">
