--- a/Text.html
+++ b/Text.html
@@ -7,41 +7,39 @@
     </p>
 </div>
 
-<div id="instruct_normal_waiting" class="service">
-    Перед вами - другой тип задач<br>
-    Зеленый шарик будет так же двигаться по траектории, но в какой-то
-    момент скроется из виду (при этом продолжит движение)<br>
-    Ваша задача - остановить его нажатием пробела тогда, когда, по-вашему, он достигнет конца пути
-    <br>
+<div id="instruct_normal" class="service">
+    Данной задаче предшествует демонстрация фигуры в виде треугольника.<br>
+    В рамках задачи будет представлена траектория, по которой движется шарик.
+    После прохождения первой половины пути движение будет скрыто.<br>
+    Ваша цель – остановить движение шарика нажатием клавиши ПРОБЕЛ как можно ближе к
+    концу траектории.<br><br>
+    Во время выполнения задания удерживайте взгляд на треугольнике в центре экрана
+    и старайтесь не моргать.<br><br>
+    Старайтесь выполнять задачу как можно точнее.
+    За более точные ответы предусмотрено начисление баллов,
+    которые будут показаны спустя определенное количество попыток. <br><br>
+
+    В тренировочной части Вам будет показана обратная связь в виде фактической точки остановки движения.
+    После завершения тренировки обратная связь предъявляться не будет.
     <p style="color: grey; font-family: cursive;">
-        Нажмите пробел для запуска анимации
+        Нажмите пробел, когда будете готовы
     </p>
 </div>
 
-<div id="instruct_normal_running" class="service">
-    Сейчас шарик едет к черной точке на конце линии, и на подходе к ней скроется из виду
-    <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, когда он будет на точке цели
-    </p>
-</div>
-
-<div id="instruct_normal_inspect" class="service">
-    В тренировочных попытках положение шарика после остановки показывается, в самом тесте - не будет
-    <p style="color: grey; font-family: cursive;">
-        Нажмите пробел для продолжения
-    </p>
-</div>
-
-<div id="instruct_starting" class="service">
-    Now, a real test will start
-</div>
-
-<div id="instruct_nomask_waiting" class="service">
-    Перед вами - первый тип задач<br>
-    На экране черной линией очерчена траектория. Черная точка - ее конец.<br>
-    Зеленый шарик будет двигаться по траектории к черной точке, но может перелететь за нее.<br>
-    Ваша задача - нажать пробел как можно скорее тогда, когда шарик будет на черной точке
-    (это остановит шарик)<br>
+<div id="instruct_backward" class="service">
+    Данной задаче предшествует демонстрация фигуры в виде звездочки.<br>
+    В рамках задачи Вам нужно оценить время движения шарика и потом отмерить его после его остановки.
+    Шарик будет двигаться по траектории, а после достижения ее конца шарик остановится на короткое время.
+    Как только он исчезнет, начнется отсчет времени его движения.<br>
+    Ваша цель – нажать клавишу ПРОБЕЛ когда по Вашему мнению пройдет именно столько времени,
+    сколько шарик двигался по представленной траектории.<br><br>
+    Во время выполнения задания удерживайте взгляд на звездочке в центре экрана и
+    старайтесь не моргать.<br><br>
+    Старайтесь выполнять задачу как можно точнее.
+    За более точные ответы предусмотрено начисление баллов,
+    которые будут показаны спустя определенное количество попыток.<br><br>
+    В тренировочной части Вам будет показана обратная связь в виде % опережения или опоздания.
+    После завершения тренировки обратная связь предъявляться не будет.
     <p style="color: grey; font-family: cursive;">
         Нажмите пробел, когда будете готовы
     </p>
