--- a/Library.html
+++ b/Library.html
@@ -4723,3 +4723,368 @@
         ]
     }
 </script>
+
+<script id="traj_testing" type="application/json">
+    {
+        "unmasked": [
+            {
+                "mask": 100,
+                "points": [
+                    {
+                        "x": 531,
+                        "y": 263
+                    },
+                    {
+                        "x": 525,
+                        "y": 298
+                    },
+                    {
+                        "x": 470,
+                        "y": 268
+                    },
+                    {
+                        "x": 465,
+                        "y": 204
+                    },
+                    {
+                        "x": 490,
+                        "y": 147
+                    },
+                    {
+                        "x": 492,
+                        "y": 96
+                    },
+                    {
+                        "x": 429,
+                        "y": 86
+                    },
+                    {
+                        "x": 385,
+                        "y": 81
+                    },
+                    {
+                        "x": 329,
+                        "y": 96
+                    },
+                    {
+                        "x": 274,
+                        "y": 96
+                    },
+                    {
+                        "x": 282,
+                        "y": 131
+                    },
+                    {
+                        "x": 240,
+                        "y": 123
+                    },
+                    {
+                        "x": 243,
+                        "y": 158
+                    },
+                    {
+                        "x": 266,
+                        "y": 185
+                    },
+                    {
+                        "x": 233,
+                        "y": 194
+                    }
+                ],
+                "speed": 0.2
+            },
+            {
+                "mask": 200,
+                "points": [
+                    {
+                        "x": 431,
+                        "y": 81
+                    },
+                    {
+                        "x": 520,
+                        "y": 108
+                    },
+                    {
+                        "x": 585,
+                        "y": 197
+                    },
+                    {
+                        "x": 502,
+                        "y": 286
+                    },
+                    {
+                        "x": 427,
+                        "y": 281
+                    }
+                ],
+                "speed": 0.4
+            },
+            {
+                "mask": 100,
+                "points": [
+                    {
+                        "x": 425,
+                        "y": 267
+                    },
+                    {
+                        "x": 480,
+                        "y": 291
+                    },
+                    {
+                        "x": 511,
+                        "y": 269
+                    },
+                    {
+                        "x": 549,
+                        "y": 256
+                    },
+                    {
+                        "x": 594,
+                        "y": 214
+                    }
+                ],
+                "speed": 0.2
+            }
+        ],
+        "normal": [
+            {
+                "mask": 100,
+                "points": [
+                    {
+                        "x": 531,
+                        "y": 263
+                    },
+                    {
+                        "x": 525,
+                        "y": 298
+                    },
+                    {
+                        "x": 470,
+                        "y": 268
+                    },
+                    {
+                        "x": 465,
+                        "y": 204
+                    },
+                    {
+                        "x": 490,
+                        "y": 147
+                    },
+                    {
+                        "x": 492,
+                        "y": 96
+                    },
+                    {
+                        "x": 429,
+                        "y": 86
+                    },
+                    {
+                        "x": 385,
+                        "y": 81
+                    },
+                    {
+                        "x": 329,
+                        "y": 96
+                    },
+                    {
+                        "x": 274,
+                        "y": 96
+                    },
+                    {
+                        "x": 282,
+                        "y": 131
+                    },
+                    {
+                        "x": 240,
+                        "y": 123
+                    },
+                    {
+                        "x": 243,
+                        "y": 158
+                    },
+                    {
+                        "x": 266,
+                        "y": 185
+                    },
+                    {
+                        "x": 233,
+                        "y": 194
+                    }
+                ],
+                "speed": 0.2
+            },
+            {
+                "mask": 200,
+                "points": [
+                    {
+                        "x": 431,
+                        "y": 81
+                    },
+                    {
+                        "x": 520,
+                        "y": 108
+                    },
+                    {
+                        "x": 585,
+                        "y": 197
+                    },
+                    {
+                        "x": 502,
+                        "y": 286
+                    },
+                    {
+                        "x": 427,
+                        "y": 281
+                    }
+                ],
+                "speed": 0.4
+            },
+            {
+                "mask": 100,
+                "points": [
+                    {
+                        "x": 425,
+                        "y": 267
+                    },
+                    {
+                        "x": 480,
+                        "y": 291
+                    },
+                    {
+                        "x": 511,
+                        "y": 269
+                    },
+                    {
+                        "x": 549,
+                        "y": 256
+                    },
+                    {
+                        "x": 594,
+                        "y": 214
+                    }
+                ],
+                "speed": 0.2
+            }
+        ],
+        "backward": [
+            {
+                "mask": 100,
+                "points": [
+                    {
+                        "x": 531,
+                        "y": 263
+                    },
+                    {
+                        "x": 525,
+                        "y": 298
+                    },
+                    {
+                        "x": 470,
+                        "y": 268
+                    },
+                    {
+                        "x": 465,
+                        "y": 204
+                    },
+                    {
+                        "x": 490,
+                        "y": 147
+                    },
+                    {
+                        "x": 492,
+                        "y": 96
+                    },
+                    {
+                        "x": 429,
+                        "y": 86
+                    },
+                    {
+                        "x": 385,
+                        "y": 81
+                    },
+                    {
+                        "x": 329,
+                        "y": 96
+                    },
+                    {
+                        "x": 274,
+                        "y": 96
+                    },
+                    {
+                        "x": 282,
+                        "y": 131
+                    },
+                    {
+                        "x": 240,
+                        "y": 123
+                    },
+                    {
+                        "x": 243,
+                        "y": 158
+                    },
+                    {
+                        "x": 266,
+                        "y": 185
+                    },
+                    {
+                        "x": 233,
+                        "y": 194
+                    }
+                ],
+                "speed": 0.2
+            },
+            {
+                "mask": 200,
+                "points": [
+                    {
+                        "x": 431,
+                        "y": 81
+                    },
+                    {
+                        "x": 520,
+                        "y": 108
+                    },
+                    {
+                        "x": 585,
+                        "y": 197
+                    },
+                    {
+                        "x": 502,
+                        "y": 286
+                    },
+                    {
+                        "x": 427,
+                        "y": 281
+                    }
+                ],
+                "speed": 0.4
+            },
+            {
+                "mask": 100,
+                "points": [
+                    {
+                        "x": 425,
+                        "y": 267
+                    },
+                    {
+                        "x": 480,
+                        "y": 291
+                    },
+                    {
+                        "x": 511,
+                        "y": 269
+                    },
+                    {
+                        "x": 549,
+                        "y": 256
+                    },
+                    {
+                        "x": 594,
+                        "y": 214
+                    }
+                ],
+                "speed": 0.2
+            }
+        ]
+    }
+</script>
