--- a/Text.html
+++ b/Text.html
@@ -1,9 +1,28 @@
 <div id="instruct_welcome" class="service">
-    Добро пожаловать в тест Time To Collision<br>
-    Сейчас вам будет предложена серия тренировочных заданий с описанием<br>
-    В самом тесте будут встречаться им подобные, но в случайном порядке<br>
+    <p>Благодарим Вас за участие в исследовании!</p>
+    В ходе эксперимента Вам предстоит выполнить четыре различные задачи,
+    каждая из которых включает некоторое количество попыток.
+    К каждой задаче Вы получите более подробные инструкции в тренировочной части.<br>
+    Попытки будут представлены в случайном порядке и будут разделены на
+    несколько экспериментальных блоков. Обратите внимание, что тип задачи
+    можно будет определить по фигуре, расположенной в центре экрана:
+    <ul>
+        <li>Квадрат – Вам потребуется остановить движение объекта как можно ближе к краю траектории,
+            движение будет видимым только на первой половине пути;</li>
+        <li>Треугольник – Вам потребуется остановить движение объекта как можно
+        ближе к краю траектории, движение будет видимым на протяжении всего пути;</li>
+        <li>Ромб – Вам потребуется оценить время движения по траектории,
+        а после этого воспроизвести его, отмерив в уме аналогичный временной интервал;</li>
+        <li>Крест – Вам потребуется оценить время демонстрации объекта на экране,
+        после чего воспроизвести его.</li>
+    </ul>
+    В тренировочной части Вам будет демонстрироваться обратная связь в виде точности каждого ответа.
+    После завершения тренировки точность Вашего решения Вам демонстрироваться не будет.<br>
+    Во время выполнения заданий удерживайте взгляд на фигурах в центре экрана и старайтесь не моргать.<br>
+    Старайтесь отвечать как можно точнее. В конце каждого экспериментального блока Ваша работа
+    будет оцениваться в среднем проценте ошибок Ваших ответов (чем меньше процент ошибок, тем лучше).<br>
     <p style="color: grey; font-family: cursive;">
-        Нажмите пробел для продолжения
+        Нажмите <b>пробел</b> для перехода к тренировке
     </p>
 </div>
 
@@ -11,7 +30,7 @@
     Данной задаче предшествует демонстрация фигуры в виде треугольника.<br>
     В рамках задачи будет представлена траектория, по которой движется шарик.
     После прохождения первой половины пути движение будет скрыто.<br>
-    Ваша цель – остановить движение шарика нажатием клавиши ПРОБЕЛ как можно ближе к
+    Ваша цель – остановить движение шарика нажатием клавиши <b>пробел</b> как можно ближе к
     концу траектории.<br><br>
     Во время выполнения задания удерживайте взгляд на треугольнике в центре экрана
     и старайтесь не моргать.<br><br>
@@ -22,7 +41,7 @@
     В тренировочной части Вам будет показана обратная связь в виде фактической точки остановки движения.
     После завершения тренировки обратная связь предъявляться не будет.
     <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, когда будете готовы
+        Нажмите <b>пробел</b>, когда будете готовы
     </p>
 </div>
 
@@ -31,7 +50,7 @@
     В рамках задачи Вам нужно оценить время движения шарика и потом отмерить его после его остановки.
     Шарик будет двигаться по траектории, а после достижения ее конца шарик остановится на короткое время.
     Как только он исчезнет, начнется отсчет времени его движения.<br>
-    Ваша цель – нажать клавишу ПРОБЕЛ когда по Вашему мнению пройдет именно столько времени,
+    Ваша цель – нажать клавишу <b>пробел</b> когда по Вашему мнению пройдет именно столько времени,
     сколько шарик двигался по представленной траектории.<br><br>
     Во время выполнения задания удерживайте взгляд на звездочке в центре экрана и
     старайтесь не моргать.<br><br>
@@ -41,75 +60,25 @@
     В тренировочной части Вам будет показана обратная связь в виде % опережения или опоздания.
     После завершения тренировки обратная связь предъявляться не будет.
     <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, когда будете готовы
+        Нажмите <b>пробел</b>, когда будете готовы
     </p>
 </div>
 
-<div id="instruct_nomask_inspect" class="service">
-    Шарик остановился, результат был записан - попытка завершена
-    <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, чтобы перейти дальше
-    </p>
-</div>
-
-<div id="instruct_nomask_running" class="service">
-    Сейчас шарик едет к черной точке на конце линии
-    <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, когда он будет на ней
-    </p>
-</div>
-
-<div id="instruct_backward_waiting_fwd" class="service">
-    Перед вами - третий тип задач. В нем вам предстоит отмерять движение шарика по памяти.<br>
-    Вначале анимация движения шарика покажется полностью, без окклюдера<br>
-    Останавливать его <b>не</b> нужно<br>
+<div id="instruct_nomask" class="service">
+    Данной задаче предшествует демонстрация фигуры в виде треугольника.<br>
+    В рамках задачи будет представлена траектория, по которой движется шарик.
+    Движение будет видимо на протяжении всего пути.<br>
+    Ваша цель – остановить движение шарика нажатием клавиши <b>пробел</b>
+    как можно ближе к концу траектории.<br><br>
+    Во время выполнения задания удерживайте взгляд на ромбе в центре экрана и старайтесь
+    не моргать.<br><br>
+    Старайтесь выполнять задачу как можно точнее.
+    За более точные ответы предусмотрено начисление баллов, которые будут
+    показаны спустя определенное количество попыток.<br><br>
+    В тренировочной части Вам будет показана обратная связь в виде фактической точки
+    остановки движения. После завершения тренировки обратная связь предъявляться не будет.
     <p style="color: grey; font-family: cursive;">
         Нажмите пробел, когда будете готовы
-    </p>
-</div>
-
-<div id="instruct_backward_running_fwd" class="service">
-    Сейчас шарик движется к конечной точке.<br>
-    Запомните его скорость и то, сколько времени это займет
-</div>
-
-<div id="instruct_backward_inspect_fwd" class="service">
-    Шарик доехал до конца и остановился.<br>
-    Дальше шарик поедет тем же путем в обратную сторону. Ваша задача - остановить его пробелом,
-    когда он доедет до начальной точки (теперь обозначена черным кругом).<br>
-    Шарик сейчас не виден и <b>не</b> будет виден на протяжении уровня.
-    <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, когда будете готовы.<br>
-        В тесте это будет происходить автоматически через секунду
-    </p>
-</div>
-
-<div id="instruct_backward_running_bwd" class="service">
-    Шарик (невидимый) едет по траектории назад<br>
-    Остановите его пробелом, когда он достигнет начальной точки
-    <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, когда шарик должен прийти в начало пути
-    </p>
-</div>
-
-<div id="instruct_backward_inspect_bwd" class="service">
-    Анимация остановлена, результат записан
-    <p style="color: grey; font-family: cursive;">
-        Нажмите пробел, чтобы перейти дальше
-    </p>
-</div>
-
-<div id="instruct_repeat" class="service">
-    <p style="color: grey; font-family: cursive;">
-        Повторите тест несколько раз
-    </p>
-</div>
-
-<div id="instruct_finished" class="service">
-    Тренировка завершена<br>
-    Если у вас остались вопросы по прохождению уровня, обратитесь к ассессору
-    <p style="color: grey; font-family: cursive;">
-        Нажмите, чтобы продолжить
     </p>
 </div>
 
