fixed instruction texts

--- a/Index.html
+++ b/Index.html
@@ -214,6 +214,9 @@
         await tr.TrainUnmasked()
         await tr.TrainNormal()
         await tr.TrainBackward()
+
+        await sr.Run()
+        sr.Save()
     }
 </script>
 </body>
