--- a/Text.html
+++ b/Text.html
@@ -27,12 +27,12 @@
 </div>
 
 <div id="instruct_normal" class="service">
-    Данной задаче предшествует демонстрация фигуры в виде треугольника.<br>
+    Данной задаче предшествует демонстрация фигуры в виде квадрата.<br>
     В рамках задачи будет представлена траектория, по которой движется шарик.
     После прохождения первой половины пути движение будет скрыто.<br>
     Ваша цель – остановить движение шарика нажатием клавиши <b>пробел</b> как можно ближе к
     концу траектории.<br><br>
-    Во время выполнения задания удерживайте взгляд на треугольнике в центре экрана
+    Во время выполнения задания удерживайте взгляд на квадрате в центре экрана
     и старайтесь не моргать.<br><br>
     Старайтесь выполнять задачу как можно точнее.
     За более точные ответы предусмотрено начисление баллов,
@@ -46,13 +46,13 @@
 </div>
 
 <div id="instruct_backward" class="service">
-    Данной задаче предшествует демонстрация фигуры в виде звездочки.<br>
+    Данной задаче предшествует демонстрация фигуры в виде ромба.<br>
     В рамках задачи Вам нужно оценить время движения шарика и потом отмерить его после его остановки.
     Шарик будет двигаться по траектории, а после достижения ее конца шарик остановится на короткое время.
     Как только он исчезнет, начнется отсчет времени его движения.<br>
     Ваша цель – нажать клавишу <b>пробел</b> когда по Вашему мнению пройдет именно столько времени,
     сколько шарик двигался по представленной траектории.<br><br>
-    Во время выполнения задания удерживайте взгляд на звездочке в центре экрана и
+    Во время выполнения задания удерживайте взгляд на ромбе в центре экрана и
     старайтесь не моргать.<br><br>
     Старайтесь выполнять задачу как можно точнее.
     За более точные ответы предусмотрено начисление баллов,
@@ -70,7 +70,7 @@
     Движение будет видимо на протяжении всего пути.<br>
     Ваша цель – остановить движение шарика нажатием клавиши <b>пробел</b>
     как можно ближе к концу траектории.<br><br>
-    Во время выполнения задания удерживайте взгляд на ромбе в центре экрана и старайтесь
+    Во время выполнения задания удерживайте взгляд на треугольнике в центре экрана и старайтесь
     не моргать.<br><br>
     Старайтесь выполнять задачу как можно точнее.
     За более точные ответы предусмотрено начисление баллов, которые будут
