--- a/Index.html
+++ b/Index.html
@@ -1,222 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ball Trajectory Visualization</title>
+    <title>Test Setup</title>
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-
-        /* --- Container and SVG --- */
-        .svg-container {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: #fff;
-            position: relative;
-        }
-
-        svg {
-            width: 100%;
-            height: 100%;
-            border: none;
-            background: #fff;
-        }
-
-        /* --- SVG Elements --- */
-        .svg_traj {
-            stroke: #000;
-            stroke-width: 2;
-            fill: none;
-        }
-
-        .svg_point {
-            fill: #000;
-            stroke: #000;
-            stroke-width: 1;
-        }
-
-        .floating_ball {
-            fill: #0f0;
-            stroke: #060;
-            stroke-width: 2;
-        }
-
-        .svg_mask_traj {
-            stroke: #fff;
-            stroke-width: 25;
-            stroke-dasharray: 5 5;
-            fill: none;
-            stroke-linecap: round;
-        }
-
-        .svg_mask_point {
-            fill: #fff;
-            stroke: #f00;
-            stroke-width: 2;
-            opacity: 0.7;
-        }
-
-        .svg_point_hidden,
-        .svg_traj_hidden {
-            display: none;
-        }
-
-        .svg_fixation_pt {
-            fill: #f00;
-            stroke: #060;
-            stroke-width: 2;
-        }
-
-        /* --- Overlay Banner --- */
-        .svg-banner {
-            position: absolute;
-            inset: 0;
-            background: #fff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font: bold 22px Arial, sans-serif;
-            color: #333;
-            z-index: 10;
-        }
-
-        .svg-banner.hidden {
-            opacity: 0;
-            pointer-events: none;
-        }
-
-        .banner-content {
-            text-align: center;
-        }
-
-        /* --- Time Inputs --- */
-        .time-inputs {
-            margin-top: 15px;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
-            align-items: center;
-            font-size: 16px;
-        }
-
-        .time-inputs input {
-            width: 60px;
-            padding: 5px;
-            font-size: 16px;
-            text-align: center;
-            border: 1px solid #aaa;
-            border-radius: 6px;
-        }
-
-        .time-inputs.hidden {
-            display: none;
-        }
-
-        /* --- Save and Exit Button --- */
-        #saveExitBtn {
-            position: absolute;
-            top: 15px;
-            right: 20px;
-            padding: 10px 18px;
-            background: #0078d7;
-            color: white;
-            font-size: 16px;
-            font-family: Arial, sans-serif;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            z-index: 20;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            transition: background 0.2s ease;
-        }
-
-        #saveExitBtn:hover {
-            background: #005fa3;
-        }
+        body { font-family: Arial, sans-serif; max-width: 500px; margin: 50px auto; padding: 20px; }
+        .field { margin: 15px 0; }
+        label { display: block; margin-bottom: 5px; font-weight: bold; }
+        input, select, button { width: 100%; padding: 8px; margin: 5px 0; }
+        button { background: #007cba; color: white; border: none; padding: 10px; cursor: pointer; }
+        button:hover { background: #005a87; }
+        .reset { background: #ccc; color: black; margin-top: 10px; }
+        .reset:hover { background: #aaa; }
     </style>
 </head>
 <body>
-
-<div class="svg-container">
-    <!-- Save and Exit Button -->
-    <button id="saveExitBtn">Save and Exit</button>
-
-    <svg id="animation_svg" viewBox="0 0 700 400" preserveAspectRatio="xMidYMid meet">
-        <g id="svg_ball_bottom"></g>
-        <g id="svg_ball_middle"></g>
-        <g id="svg_ball_top"></g>
-        <g id="svg_traj"></g>
-
-        <g id="svg_fixation_circle">
-            <circle class="svg_fixation_pt" cx="350" cy="200" r="10"></circle>
-        </g>
-        <g id="svg_fixation_rect">
-            <g transform="translate(350,200)">
-                <rect x="-10" y="-10" width="20" height="20" class="svg_fixation_pt" />
-            </g>
-        </g>
-        <g id="svg_fixation_rhomb">
-            <g transform="translate(350,200) rotate(45)">
-                <rect x="-10" y="-10" width="20" height="20" class="svg_fixation_pt" />
-            </g>
-        </g>
-        <g id="svg_fixation_cross">
-            <g transform="translate(350,200)">
-                <line x1="-10" x2="10" y1="0" y2="0" class="svg_fixation_pt" />
-                <line x1="0" x2="0" y1="-10" y2="10" class="svg_fixation_pt" />
-            </g>
-        </g>
-        <g id="svg_fixation_triangle">
-            <g transform="translate(350,200)">
-                <polygon points="-10,10 0,-10 10,10" class="svg_fixation_pt" />
-            </g>
-        </g>
-    </svg>
-
-    <div id="svg_banner" class="svg-banner hidden">
-        <div class="banner-content">
-            <p id="banner_text"></p>
-
-            <div class="time-inputs" id="timeInputs">
-                <label>
-                    Минуты:
-                    <input type="number" id="minutesInput" min="0" max="59" value="0">
-                </label>
-                <label>
-                    Секунды:
-                    <input type="number" id="secondsInput" min="0" max="59" value="0">
-                </label>
-            </div>
-        </div>
+<div id="setup">
+    <div class="field">
+        <label>Workstation ID:</label>
+        <div id="workstationId">Incorrect login</div>
     </div>
+
+    <div class="field">
+        <label for="participantId">Participant ID:</label>
+        <input type="text" id="participantId" placeholder="Enter participant ID">
+    </div>
+
+    <div class="field">
+        <label for="testType">Test Type:</label>
+        <select id="testType">
+            <option value="training">Training</option>
+            <option value="trial1">Trial 1</option>
+            <option value="trial2">Trial 2</option>
+        </select>
+    </div>
+
+    <button onclick="startTest()">Start Test</button>
+    <button class="reset" onclick="resetCredentials()">Change Workstation ID</button>
 </div>
 
-<iframe src="./Text.html" id="instructionTexts" height="0" width="0"></iframe>
-<iframe src="./Library.html" id="trajJsonLib" height="0" width="0"></iframe>
-
-<script type="module">
-    import {StaticRunner} from "./StaticRunner.js";
-    import * as Train from "./TrainLaunchers.js";
-
+<script>
+    let workstationId;
     window.onload = async function() {
-        let sr = new StaticRunner();
-        let tr = new Train.TrainLauncher(sr);
+        workstationId = "Error"
+        try {
+            let response = await fetch('/login');
+            let username = response.headers.get('X-username');
+            workstationId = username || 'Unknown';
+        } catch (e) {
+            console.log(e)
+        }
+        document.getElementById('workstationId').textContent = workstationId;
+    }
 
-        await tr.TrainUnmasked()
-        await tr.TrainNormal()
-        await tr.TrainBackward()
 
-        await sr.Run()
-        sr.Save()
+    function startTest() {
+        const participantId = document.getElementById('participantId').value;
+        const testType = document.getElementById('testType').value;
+
+        if (!participantId) {
+            alert('Please enter Participant ID');
+            return;
+        }
+
+        const params = {
+            workstationId,
+            participantId,
+            testType
+        };
+
+        window.location.href = `Runner.html#${encodeURIComponent(JSON.stringify(params))}`
+    }
+
+    function resetCredentials() {
+        // Clear any existing credentials and reload with basic auth reset
+        const iframe = document.createElement('iframe');
+        iframe.style.display = 'none';
+        iframe.src = `http://logout:logout@${window.location.host}/`;
+        document.body.appendChild(iframe);
+
+        setTimeout(() => {
+            document.body.removeChild(iframe);
+            window.location.reload();
+        }, 100);
     }
 </script>
 </body>
